# go-pgembed

./: .dockerignore  .gitattributes  Dockerfile  README.md  build_rust.sh  generate.cmd  generate.go  generate.sh  generate_windows.go  go.mod  pgembed.go  pgembed_test.go  postgres_embedded.go  postgres_embedded_test.go
example/: main.go
rust/: Cargo.toml
rust/src/: lib.rs
rust_lib/: Cargo.toml
rust_lib/src/: lib.rs
